--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hotel Paraíso</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/ed66fa8e62.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -39,6 +40,61 @@
         <li class="small" style="background-image: url('./img/itacare-04.jpg')"></li>
     </ul>
 </section>
+
+<section class="caracteristicas">
+    <h3>Unico hotel pé na areia de Itacaré</h3>
+    <p>Implantado em uma área completamente arborizada, o Hotel Paraíso é o único hotel pé na areia
+    de Itacaré. Aqui o mar será o seu compnaheiro e você terá as belezas da natureza</p>
+    <hr>
+    <ul class="grid">
+        <li>
+            <i class="fa-solid fa-location-arrow"></i>
+            <h4>Localização</h4>
+            <p>Localizada no sul da Bahia, entre o mar e amata atlântica, Itacaré tem refrescantes cachoeiras,
+            praias belíssimas, muitas delas tão pequenas que nem aparecem nos mapas.</p>
+        </li>
+
+        <li>
+            <i class="fas fa-gift"></i>
+            <h4>Pacotes e Ofertas</h4>
+            <p>Sabe aquela-e descontraído encontro com a família e amigos? Ou um momento relax? Nossa companhia
+                possui uma diversidade de espaços que proporcionam momentos inesquecíveis. </p>
+        </li>
+
+        <li>
+            <i class="fas fa-home"></i>
+            <h4>Acomodações</h4>
+            <p>Hotel Paraíso possui 29 unidades, divididas entre 11 chalés, 16 amplas suítes e 2 chales
+            todas com TV a cabo, frigobar, além de varanda com rede que proporciona uma linda vista também.</p>
+        </li>
+
+    </ul>
+</section>
+
+<section class="newsletter">
+    <h3>newsletter</h3>
+    <p>Assine nossa newsletter para se manter atualizado com nossos serviços e a programação de nossos eventos 
+    culturais.</p>
+    <hr>
+
+    <form>
+        <input type="text" placeholder="Email">
+        <button>Cadastrar</button>
+    </form>
+</section>
+
+<footer>
+    <ul>
+        <li><a href=""><i class="fab fa-facebook"></i></a></li>
+        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+        <li><a href=""><i class="fab fa-pinterest"></i></a></li>
+    </ul>
+    <p>Todos os direitos reservados - Hotel Paraíso 2023</p>
+</footer>
+
+
+
     
 </body>
 
